# POC-APIs-security

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: branch_management.md  tree.md
.github/.workflows/: pre-commit.yaml
.github/ISSUE_TEMPLATE/: bug-report---.md
database/: database.db  example_database.db
misc/http-server/: hello.txt  vuln7.py
scripts/: generate_example_database.py  simulate_dos_on_api.py  test_api_routes.py
src/: app.py  generate_example_database.py
src/config/: .env  config.py  data_models.py  example_database_data.json  example_database_data.yaml  example_database_tables.yaml  logger_config.yaml
src/modules/: logger.py  sqlite_engine.py
src/routes/: login.py  vuln1.py  vuln10.py  vuln2.py  vuln3.py  vuln4.py  vuln5.py  vuln6.py  vuln7.py  vuln8.py  vuln9.py  vulnX.py
src/scripts/: generate_example_database.py
src/templates/: captcha_form.html  solved_captcha.html
src/utils/: captcha.py  cryptography.py  hashing.py  host_command_execution.py  logger.py  rate_limiter.py  security_functions.py  sqlite_engine.py
