[project]
name = "poc-apis-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "argon2-cffi>=23.1.0",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
