[project]
name = "poc-apis-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "argon2-cffi>=23.1.0",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "pydantic[email]>=2.10.6",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "gittyleaks>=0.0.31",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "tqdm>=4.67.1",
]
